--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vuedx/typescript-plugin-vue": "^0.6.0",
     "autoprefixer": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "default-passive-events": "^2.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-vue": "^7.2.0",
     "jest": "^26.6.3",
