--- a/.env.staging
+++ b/.env.staging
@@ -5,5 +5,9 @@ ENV = 'staging'
 
 # base api
 VUE_APP_BASE_API = '/stage-api'
+BASE_URL = '/stage-api'
 
-VUE_APP_LT=1-3
+# VITE
+VITE_APP_BASE_API = '/stage-api'
+VITE_APP_BASE_URL =  http://localhost:3005
+VITE_PORT = 3005
