--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,11 @@ ENV = 'production'
 
 # base api
 VUE_APP_BASE_API = '/prod-api'
+BASE_URL = '/prod-api'
 
 port = 3005
+
+# VITE
+VITE_APP_BASE_API = '/prod-api'
+VITE_APP_BASE_URL =  http://localhost:3005
+VITE_PORT = 3005
