--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,10 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/dev-api'
 
-VUE_APP_API_BASE_URL = http://192.168.0.229:3005
-
+VUE_APP_API_BASE_URL = http://localhost:3005
 port = 3005
+
+# VITE
+VITE_APP_BASE_API = '/dev-api'
+VITE_APP_BASE_URL =  http://localhost:3005
+VITE_PORT = 3005
