--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^0.21.1",
     "echarts": "^5.0.2",
     "element-plus": "^1.0.2-beta.35",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "less": "^4.1.1",
+    "prettier": "^2.2.1",
     "screenfull": "^5.1.0",
     "vue": "^3.0.7",
     "vue-router": "4"
@@ -27,8 +30,8 @@
     "@types/mockjs": "^1.0.3",
     "@types/node": "^14.14.20",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.11",
     "@vue/test-utils": "^2.0.0-beta.13",
@@ -37,8 +40,8 @@
     "autoprefixer": "^10.1.0",
     "babel-jest": "^26.6.3",
     "default-passive-events": "^2.0.0",
-    "eslint": "^7.15.0",
-    "eslint-plugin-vue": "^7.2.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-vue": "^7.8.0",
     "jest": "^26.6.3",
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
